--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,1 @@
-DB_LOCATION = administrator
-
-XQmbH3_Revr-6_J
-
-mongodb+srv://administrator:<db_password>@blogging-website.q5ivf.mongodb.net/?retryWrites=true&w=majority&appName=blogging-website
+DB_LOCATION="mongodb+srv://administrator:<db_password>@blogging-website.q5ivf.mongodb.net/?retryWrites=true&w=majority&appName=blogging-website"
